{
    "name": "UserInputActions",
    "maps": [
        {
            "name": "EditingCurve",
            "id": "0e2c86ca-e4d2-4e68-ae37-585e185c5136",
            "actions": [
                {
                    "name": "AddMarker",
                    "type": "Button",
                    "id": "157ea672-0392-414a-a909-6d240c1b966f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveMarker",
                    "type": "Button",
                    "id": "1a0896fa-029d-46cb-87a8-0614f7aef2a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeleteMarker",
                    "type": "Button",
                    "id": "67313b06-28ea-4ff9-b884-74dc48e61557",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RecordMouse",
                    "type": "Button",
                    "id": "8f108217-1315-41b8-8647-1c1e81a4ac55",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "98364513-fa90-4997-94e5-a6400cca232c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddMarker",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f92301ec-1a6b-4c3b-ad41-f7dfb43d4bad",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveMarker",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "409d3c1a-afdd-4ef0-85a0-a83d109379af",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteMarker",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f32f7f5-303e-40b3-aedb-4ae1ade589ca",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RecordMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}